Package: psCBS
==============

Version: 0.9.32 [2010-12-03]
o BUG FIX: In rare cases the bootstrap sanity checks can indeed produce
  an invalid 'range', more precisely where (range[,2] >= range[,1]) is
  not true.


Version: 0.9.31 [2010-12-02]
o Added option "psCBS/sanityChecks/tolerance" for specifying the 
  tolerance of some internal sanity checks.  


Version: 0.9.30 [2010-12-01]
o Rewrote all code dealing with the identification of loci belong
  to segments.  The code is now utilizing the 'segRows' element
  returned by DNAcopy::segment().  Lots of the code was rewritten
  and therefore completely new bugs may have been introduced.


Version: 0.9.25 [2010-11-30]
o BUG FIX: Argument 'flavor' of segmentByPairedPSCBS() would be ignored
  if multiple chromsomomes were segmented.
o BUG FIX: extractByChromosome() for PSCBS would call it self instead
  of extractByChromosomes().


Version: 0.9.24 [2010-11-28]
o BUG FIX: postsegmentTCN() did not handle loci with the same positions
  and that are split in two different segments.  It also did not exclude
  loci with missing values.


Version: 0.9.23 [2010-11-28]
o BUG FIX: The algorithm in segmentByCBS() that infers which loci (of
  the ones share the same genomic positions) that should be exclude
  from each segment did not take missing signals into account.
o BUG FIX: Iff argument 'chromosome' to segmentByPairedPSCBS() was of
  length greater than one and specified exactly one unique chromosome,
  then exception "Number of elements in argument 'chromosome' should
  be exactly 8712 not 86209 value(s)" would be thrown.


Version: 0.9.22 [2010-11-27]
o BUG FIX: bootstrapTCNandDHByRegion() would incorrectly include
  non-polymorphic loci in the set of homozygous SNPs during resampling.
o BUG FIX: segmentByPairedPSCBS() would not accept missing values in
  argument 'chromosome'.


Version: 0.9.21 [2010-11-27]
o Now arguments '...' of segmentByPairedPSCBS() are passed to
  the two segmentByCBS() calls.